force-app/main/default/objects/Tax_Bracket__mdt/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>