force-app/main/default/objects/Tax_Bracket__mdt/fields/Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lower_Threshold__c</fullName>
    <label>Lower Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>