force-app/main/default/objects/Tax_Bracket__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>