force-app/main/default/objects/Tax_Bracket__mdt/fields/Upper_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Threshold__c</fullName>
    <label>Upper Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>